# PBDataSampler

./: .gitignore  CLAUDE.md  CourtDetectionPlan.md  PLAN.txt  README.md  possible-implementation.txt  pyproject.toml  run.sh
.claude/context-docs/architecture/: project-architecture.md
.claude/context-docs/features/: court-detection-mode.md  match-type-filtering.md  min-age-days-filter.md
.claude/context-docs/performance/: catalog-binary-search.md
src/ppa_frame_sampler/: __init__.py  cli.py  config.py  logging_utils.py  run_id.py
src/ppa_frame_sampler/filter/: court_scorer.py  metrics.py  models.py  quality_filter.py
src/ppa_frame_sampler/media/: downloader.py  extractor.py  ffprobe.py  tools.py
src/ppa_frame_sampler/output/: cleanup.py  manifest.py  naming.py  zipper.py
src/ppa_frame_sampler/pipeline/: collector.py  court_collector.py
src/ppa_frame_sampler/sampling/: segment_planner.py  timestamp_sampler.py
src/ppa_frame_sampler/youtube/: cache.py  catalog.py  channel_resolver.py  models.py
tests/: conftest.py  test_config.py  test_config_court.py  test_court_scorer.py  test_heuristic_validation.py  test_integration_burst_pipeline.py  test_integration_catalog.py  test_integration_court_pipeline.py  test_integration_end_to_end.py  test_manifest_minimal.py  test_sampler_bounds.py  test_segment_planner.py  test_slug.py
